# video-enrichment-api

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  bumpversion.py  entrypoint.sh  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/endpoints/: detection.py  entity.py  entity_media_gallery.py  healthcheck.py  segment_detection.py  taxonomy.py  video.py
app/business/: detection.py  entity.py  entity_media_gallery.py  healthcheck.py  segment_detection.py  taxonomy.py  video.py
app/core/: config.py  enums.py
app/managers/aws/: s3.py
app/schemas/: entity_media_gallery.py  healthcheck.py  video.py
tests/integration/: test_detection.py  test_entity.py  test_entity_media_gallery.py  test_main.py  test_segment_detection.py  test_taxonomy.py  test_video.py
