[build-system]
requires = ["poetry==1.7.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "video-enrichment-api"
version = "0.1.0"
description = ""
authors = ["Samuel Halstead <worksam1114@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.2"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
uvicorn = "^0.26.0"
boto3 = "^1.39.4"
video-enrichment-orm = {develop = true, path = "../video-enrichment-orm"}
python-multipart = "^0.0.20"
opencv-python = "^4.11.0.86"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.13"
black = "^23.12.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
ruamel-yaml = "^0.18.5"
httpx = "^0.26.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
ignore-init-module-imports = true
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
